<resources>
    <string name="app_name">Cooking Time</string>
    <string name="loading_receipts">Carregando receitas</string>
    <string name="empty_list">Lista vazia</string>
    <string name="error_network">Erro ao acessar lista</string>
    <string name="ingredients_list">Lista de ingredientes</string>
    <string name="previous">Anterior</string>
    <string name="next">Próximo</string>
    <string name="update">Atualizar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="change_receipt">Selecionar receita</string>
</resources>
