<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Header aligned to top -->
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center" />

        <!-- Scrollable Item below header and above footer -->
        <ScrollView
            android:id="@+id/scrollableContents"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            android:layout_below="@id/playerView" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="22dp"
                    android:padding="8dp"
                    android:text="Item 1"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>